<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:background="@mipmap/iv_photo_back"/>
    <TextView
        android:id="@+id/tv_show_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/photo_guide_title"
        android:textColor="#ff707b81"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_show_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_show_title"
        android:layout_marginTop="39dp"
        android:gravity="center"
        android:text="@string/photo_wrong_show"
        android:textColor="#ff59cff0"
        android:textSize="18sp" />


    <LinearLayout
        android:id="@+id/ll_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_show_content"
        android:layout_marginTop="23dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_guide_first"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginLeft="26dp"
            android:layout_weight="1"
            android:background="@mipmap/iv_guide_wrong_show_one" />

        <ImageView
            android:id="@+id/iv_guide_second"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginLeft="45dp"
            android:layout_toRightOf="@id/iv_guide_first"
            android:layout_weight="1"
            android:background="@mipmap/iv_guide_wrong_show_two" />

        <ImageView
            android:id="@+id/iv_guide_third"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginLeft="45dp"
            android:layout_toRightOf="@id/iv_guide_second"
            android:layout_weight="1"
            android:background="@mipmap/iv_guide_wrong_show_three"  />

        <ImageView
            android:id="@+id/iv_guide_fourth"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="23dp"
            android:layout_toRightOf="@id/iv_guide_third"
            android:layout_weight="1"
            android:background="@mipmap/iv_guide_wrong_show_four"  />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_botom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_guide"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_guide_first"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_content_wrong_guide_first"
            android:textColor="#ff828d93"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_guide_second"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_content_wrong_guide_second"
            android:textColor="#ff828d93"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_guide_third"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_content_wrong_guide_third"
            android:textColor="#ff828d93"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_guide_fourth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tv_content_wrong_guide_fourth"
            android:textColor="#ff828d93"
            android:textSize="14sp" />

    </LinearLayout>


</RelativeLayout>