<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:background="@mipmap/iv_photo_back"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:textColor="#ff707b81"
        android:textSize="18sp"
        android:text="@string/photo_guide_title"></TextView>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/iv_guide_icon_fourth"
        android:layout_marginLeft="47dp"
        android:layout_centerInParent="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/iv_guide_first"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title_guide"
        android:id="@+id/tv_guide_first"
        android:layout_marginLeft="23dp"
        android:textColor="#ff59cff0"
        android:textSize="18sp"
        android:layout_marginTop="100dp"
        android:layout_toRightOf="@id/iv_guide_first"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="50dp"
        android:textSize="14sp"
        android:textColor="#ff707b81"
        android:layout_toRightOf="@id/iv_guide_first"
        android:layout_below="@id/tv_guide_first"
        android:text="@string/tv_centent_guide" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_guide_arrow"
        android:background="@mipmap/iv_guide_arrow"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="157dp"
        android:layout_marginBottom="54dp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@mipmap/iv_take_photo_show"
        android:layout_marginBottom="27dp"
        android:layout_marginRight="38dp"
        android:id="@+id/iv_take_photo"/>

</RelativeLayout>